log
Tue Apr 14 10:57:02 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:53:19: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   53 |     mapa->buckets = (Pair*) malloc(capacity * (sizeof(Pair)));
      |                   ^
97fbcd0
Tue Apr 14 10:57:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
0638d68
Tue Apr 14 10:57:48 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3f0f401
Tue Apr 14 11:10:09 PM UTC 2026: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:15: error: too few arguments to function ‘hash’
   70 |     int pos = hash(key);
      |               ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:78:9: error: expected expression before ‘}’ token
   78 |         }
      |         ^
hashmap.c:78:9: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
0773742
Tue Apr 14 11:10:42 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:9: error: expected expression before ‘}’ token
   78 |         }
      |         ^
hashmap.c:78:9: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
edd2aa1
Tue Apr 14 11:10:54 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:87:17: error: ‘map->buckets’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   87 |     map->buckets->value = value;
      |                 ^~
      |     (*          )
756aff0
Tue Apr 14 11:11:15 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c54120c
